# TestQt

./: .gitignore  README.md
Mykhailenko_Test/: CMakeLists.txt
Mykhailenko_Test/include/: mainwindow.h
Mykhailenko_Test/include/data/: sqlitestorage.h  storage.h
Mykhailenko_Test/include/delegates/: icondelegate.h
Mykhailenko_Test/include/items/: countryitem.h  entities.h  operatoritem.h  treeitem.h
Mykhailenko_Test/include/models/: treemodel.h
Mykhailenko_Test/src/: mainwindow.cpp
Mykhailenko_Test/src/data/: sqlitestorage.cpp
Mykhailenko_Test/src/delegates/: icondelegate.cpp
Mykhailenko_Test/src/items/: countryitem.cpp  operatoritem.cpp  treeitem.cpp
Mykhailenko_Test/src/models/: treemodel.cpp
